Playing with stuff so Joe can make a checkout

--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,7 @@ classes
 # vim files
 *.swp
 
+# The users.properties file - since it might hold usernames/passwords.
+src/main/resources/org/jboss/mjolnir/users.properties
+
+
