Working authentication to obtain the team login details

--- a/src/main/resources/users.properties
+++ b/src/main/resources/users.properties
@@ -1,6 +1,7 @@
 # Name & password
-NAME=blah
-PASSWORD=yuck
+NAME=yuck
+PASSWORD=bleh
 AUTH_TOKEN=-1
 REPOSITORY_BASE=jbossas
 PROJECT=jboss-eap
+TEAM_ID=338123
