--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE web-app
-        PUBLIC "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
-        "http://java.sun.com/dtd/web-app_2_3.dtd">
 
-<web-app>
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xmlns="http://java.sun.com/xml/ns/javaee"
+         xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
+         version="2.5">
+
     <servlet>
         <servlet-name>loginService</servlet-name>
         <servlet-class>org.jboss.mjolnir.server.LoginServiceImpl</servlet-class>
@@ -14,10 +15,24 @@
         <url-pattern>/mjolnir/LoginService</url-pattern>
     </servlet-mapping>
     
+    <servlet>
+        <servlet-name>xsrf</servlet-name>
+        <servlet-class>com.google.gwt.user.server.rpc.XsrfTokenServiceServlet</servlet-class>
+    </servlet>
+    
+    <servlet-mapping>
+        <servlet-name>xsrf</servlet-name>
+        <url-pattern>/gwt/xsrf</url-pattern>
+    </servlet-mapping>
+    
+    <context-param>
+        <param-name>gwt.xsrf.session_cookie_name</param-name>
+        <param-value>JSESSIONID</param-value>
+    </context-param>
+    
     <welcome-file-list>
         <welcome-file>LoginPage.html</welcome-file>
     </welcome-file-list>
-    
 
 </web-app>
 
