--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -22,7 +22,7 @@
     
     <servlet-mapping>
         <servlet-name>xsrf</servlet-name>
-        <url-pattern>/gwt/xsrf</url-pattern>
+        <url-pattern>/mjolnir/xsrf</url-pattern>
     </servlet-mapping>
     
     <context-param>
