--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -16,6 +16,17 @@
         <url-pattern>/mjolnir/LoginService</url-pattern>
     </servlet-mapping>
 
+    <!-- Security -->
+    <servlet>
+        <servlet-name>xsrf</servlet-name>
+        <servlet-class>com.google.gwt.user.server.rpc.XsrfTokenServiceServlet</servlet-class>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>xsrf</servlet-name>
+        <url-pattern>/mjolnir/xsrf</url-pattern>
+    </servlet-mapping>
+
     <context-param>
         <param-name>gwt.xsrf.session_cookie_name</param-name>
         <param-value>JSESSIONID</param-value>
