--- a/pom.xml
+++ b/pom.xml
@@ -39,7 +39,7 @@
         <dependency>
             <groupId>org.infinispan</groupId>
             <artifactId>infinispan-core</artifactId>
-            <version>5.3.0.Beta2</version>
+            <version>5.3.0.CR1</version>
             <exclusions>
                 <exclusion>
                     <groupId>org.jgroups</groupId>
