--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -7,13 +7,23 @@
 
     <!-- The LoginService servlet -->
     <servlet>
-        <servlet-name>loginService</servlet-name>
+        <servlet-name>LoginServlet</servlet-name>
         <servlet-class>org.jboss.mjolnir.server.LoginServiceImpl</servlet-class>
     </servlet>
     
     <servlet-mapping>
-        <servlet-name>loginService</servlet-name>
+        <servlet-name>LoginServlet</servlet-name>
         <url-pattern>/mjolnir/LoginService</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
+        <servlet-name>GitHubServlet</servlet-name>
+        <servlet-class>org.jboss.mjolnir.server.GitHubServiceImpl</servlet-class>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>GitHubServlet</servlet-name>
+        <url-pattern>/mjolnir/GitHubService</url-pattern>
     </servlet-mapping>
 
     <!-- Security -->
@@ -22,9 +32,21 @@
         <servlet-class>com.google.gwt.user.server.rpc.XsrfTokenServiceServlet</servlet-class>
     </servlet>
 
-    <listener>
+    <filter>
+        <filter-name>AuthenticationFilter</filter-name>
+        <filter-class>org.jboss.mjolnir.server.AuthenticationFilter</filter-class>
+    </filter>
+
+    <filter-mapping>
+        <filter-name>AuthenticationFilter</filter-name> <!-- mandatory -->
+        <!--<url-pattern>/*</url-pattern> &lt;!&ndash; either url-pattern or servlet-name is mandatory &ndash;&gt;-->
+        <servlet-name>GitHubServlet</servlet-name>
+        <dispatcher>REQUEST</dispatcher>
+    </filter-mapping>
+
+    <!--<listener>
         <listener-class>org.jboss.mjolnir.server.CacheContextListener</listener-class>
-    </listener>
+    </listener>-->
 
     <servlet-mapping>
         <servlet-name>xsrf</servlet-name>
@@ -39,11 +61,11 @@
     <env-entry>
         <env-entry-name>INFINISPAN_STORE</env-entry-name>
         <env-entry-type>java.lang.String</env-entry-type>
-        <env-entry-value>/home/jboss/infinispan.store</env-entry-value>
+        <env-entry-value>/tmp/infinispan.store</env-entry-value>
     </env-entry>
     
     <welcome-file-list>
-        <welcome-file>LoginPage.jsp</welcome-file>
+        <welcome-file>index.jsp</welcome-file>
     </welcome-file-list>
 
 </web-app>
