modified data source JNDI lookup
- DS lookup name was changed to "java:jboss/datasources/<appName>/MjolnirDS", to allow multiple application deployments on single container

--- a/pom.xml
+++ b/pom.xml
@@ -131,6 +131,9 @@
                 <groupId>org.wildfly.plugins</groupId>
                 <artifactId>wildfly-maven-plugin</artifactId>
                 <version>1.0.2.Final</version>
+                <configuration>
+                    <name>mjolnir-dev.war</name>
+                </configuration>
             </plugin>
 
         </plugins>
