--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,12 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>xalan</groupId>
+            <artifactId>xalan</artifactId>
+            <version>2.7.1</version>
+        </dependency>
+
     </dependencies>
 
 
