--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,8 @@
     <properties>
         <gwt.version>2.7.0</gwt.version>
         <devel.webapp-dir>${project.build.directory}/devel-web-inf</devel.webapp-dir>
+        <hibernate.version>4.2.15.Final</hibernate.version>
+        <postgresql.version>9.3-1102-jdbc41</postgresql.version>
     </properties>
 
     <dependencies>
@@ -90,6 +92,25 @@
             <artifactId>xalan</artifactId>
             <version>2.7.1</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-entitymanager</artifactId>
+            <version>${hibernate.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>${postgresql.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.36</version>
+        </dependency>
+
 
     </dependencies>
 
