--- a/pom.xml
+++ b/pom.xml
@@ -137,11 +137,10 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.3</version>
-                <configuration></configuration>
-                <!--<configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
-                </configuration>-->
+                <configuration>
+                    <source>1.7</source>
+                    <target>1.7</target>
+                </configuration>
             </plugin>
 
             <plugin>
