--- a/pom.xml
+++ b/pom.xml
@@ -94,6 +94,7 @@
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-entitymanager</artifactId>
             <version>${hibernate.version}</version>
+            <scope>provided</scope>
         </dependency>
 
     </dependencies>
