--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -25,7 +25,7 @@
 
     <servlet-mapping>
         <servlet-name>GitHubServlet</servlet-name>
-        <url-pattern>/mjolnir/GitHubService</url-pattern>
+        <url-pattern>/mjolnir/auth/GitHubService</url-pattern>
     </servlet-mapping>
 
     <servlet>
@@ -35,7 +35,7 @@
 
     <servlet-mapping>
         <servlet-name>AdministrationServlet</servlet-name>
-        <url-pattern>/mjolnir/AdministrationService</url-pattern>
+        <url-pattern>/mjolnir/auth/AdministrationService</url-pattern>
     </servlet-mapping>
 
     <servlet>
@@ -45,7 +45,7 @@
 
     <servlet-mapping>
         <servlet-name>ReportingServlet</servlet-name>
-        <url-pattern>/mjolnir/ReportingService</url-pattern>
+        <url-pattern>/mjolnir/auth/ReportingService</url-pattern>
     </servlet-mapping>
 
     <servlet>
@@ -73,7 +73,7 @@
 
     <filter-mapping>
         <filter-name>AuthenticationFilter</filter-name>
-        <servlet-name>GitHubServlet</servlet-name>
+        <url-pattern>/mjolnir/auth/*</url-pattern>
         <dispatcher>REQUEST</dispatcher>
     </filter-mapping>
 
