--- a/pom.xml
+++ b/pom.xml
@@ -183,5 +183,11 @@
         </profile>
     </profiles>
 
+    <repositories>
+        <repository>
+	  <id>JBoss repository</id>
+	  <url>http://repository.jboss.org/nexus/content/groups/public/</url>
+        </repository>
+    </repositories>
 
 </project>
