code quality reporting changes
- making checkstyle fail the build
- converting findbugs output into html

--- a/pom.xml
+++ b/pom.xml
@@ -212,7 +212,7 @@
                         <id>check-style</id>
                         <phase>compile</phase>
                         <goals>
-                            <goal>checkstyle</goal>
+                            <goal>check</goal>
                         </goals>
                     </execution>
                 </executions>
@@ -224,17 +224,61 @@
                 <version>${findbugs.version}</version>
                 <configuration>
                     <xmlOutput>true</xmlOutput>
-                    <xmlOutputDirectory>target/findBugs</xmlOutputDirectory>
+                    <xmlOutputDirectory>target/findbugs</xmlOutputDirectory>
+                    <findbugsXmlOutputDirectory>target/findbugs</findbugsXmlOutputDirectory>
                 </configuration>
                 <executions>
                     <execution>
                         <id>find-bugs</id>
-                        <phase>compile</phase>
+                        <phase>verify</phase>
                         <goals>
                             <goal>findbugs</goal>
                         </goals>
                     </execution>
                 </executions>
+            </plugin>
+
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>xml-maven-plugin</artifactId>
+                <version>1.0</version>
+                <executions>
+                    <execution>
+                        <phase>verify</phase>
+                        <goals>
+                            <goal>transform</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <transformationSets>
+                        <transformationSet>
+                            <dir>${project.build.directory}/findbugs</dir>
+                            <includes>
+                                <include>findbugsXml.xml</include>
+                            </includes>
+                            <outputDir>${project.build.directory}/findbugs</outputDir>
+                            <!--<stylesheet>fancy-hist.xsl</stylesheet>-->
+                            <!--<stylesheet>default.xsl</stylesheet>-->
+                            <!--<stylesheet>plain.xsl</stylesheet>-->
+                            <stylesheet>fancy.xsl</stylesheet>
+                            <!--<stylesheet>summary.xsl</stylesheet>-->
+                            <fileMappers>
+                                <fileMapper
+                                        implementation="org.codehaus.plexus.components.io.filemappers.FileExtensionMapper">
+                                    <targetExtension>.html</targetExtension>
+                                </fileMapper>
+                            </fileMappers>
+                        </transformationSet>
+                    </transformationSets>
+                </configuration>
+                <dependencies>
+                    <dependency>
+                        <groupId>com.google.code.findbugs</groupId>
+                        <artifactId>findbugs</artifactId>
+                        <version>3.0.1</version>
+                    </dependency>
+                </dependencies>
             </plugin>
         </plugins>
 
