--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <!-- Setting up the basic information. As of now, we'll leave it as a JBoss.org project -->
     <groupId>org.jboss.mjolnir</groupId>
     <artifactId>mjolnir</artifactId>
-    <version>0.3.0-SNAPSHOT</version>
+    <version>0.3.20160104</version>
     <packaging>war</packaging>
 
     <properties>
