--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <!-- Setting up the basic information. As of now, we'll leave it as a JBoss.org project -->
@@ -9,6 +7,12 @@
     <artifactId>mjolnir</artifactId>
     <version>1.1.0-SNAPSHOT</version>
     <packaging>war</packaging>
+
+    <scm>
+        <connection>scm:git:git://github.com/jboss-set/mjolnir.git</connection>
+        <developerConnection>scm:git:git@github.com:jboss-set/mjolnir.git</developerConnection>
+        <url>https://github.com/jboss-set/mjolnir</url>
+    </scm>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -169,8 +173,7 @@
                             <tasks>
                                 <echo>Copying development web resources.</echo>
                                 <!-- copy web-devel.xml to temporary directory for use in 'devel' profile -->
-                                <copy file="${project.basedir}/src/main/webapp/WEB-INF/web-devel.xml"
-                                      tofile="${devel.webapp-dir}/WEB-INF/web.xml"/>
+                                <copy file="${project.basedir}/src/main/webapp/WEB-INF/web-devel.xml" tofile="${devel.webapp-dir}/WEB-INF/web.xml" />
                             </tasks>
                         </configuration>
                         <goals>
@@ -204,7 +207,7 @@
                     <configLocation>jboss-as-checkstyle/checkstyle.xml</configLocation>
                     <consoleOutput>true</consoleOutput>
                     <failOnViolation>true</failOnViolation>
-                    <useFile/>
+                    <useFile />
                 </configuration>
                 <dependencies>
                     <dependency>
@@ -270,8 +273,7 @@
                             <stylesheet>fancy.xsl</stylesheet>
                             <!--<stylesheet>summary.xsl</stylesheet>-->
                             <fileMappers>
-                                <fileMapper
-                                        implementation="org.codehaus.plexus.components.io.filemappers.FileExtensionMapper">
+                                <fileMapper implementation="org.codehaus.plexus.components.io.filemappers.FileExtensionMapper">
                                     <targetExtension>.html</targetExtension>
                                 </fileMapper>
                             </fileMappers>
