--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <!-- Setting up the basic information. As of now, we'll leave it as a JBoss.org project -->
     <groupId>org.jboss.mjolnir</groupId>
     <artifactId>mjolnir</artifactId>
-    <version>1.1.20160125</version>
+    <version>1.2.0-SNAPSHOT</version>
     <packaging>war</packaging>
 
     <scm>
