--- a/pom.xml
+++ b/pom.xml
@@ -287,7 +287,7 @@
                     <packager>JBoss SET</packager>
                     <mappings>
                         <mapping>
-                            <directory>/usr/share/mjolnir.war</directory>
+                            <directory>/usr/share/${project.name}</directory>
                             <filemode>644</filemode>
                             <username>jboss</username>
                             <groupname>jboss</groupname>
