--- a/pom.xml
+++ b/pom.xml
@@ -9,14 +9,14 @@
     
     <groupId>org.jboss.set.mjolnir</groupId>
     <artifactId>mjolnir</artifactId>
-    <version>1.1.3-SNAPSHOT</version>
+    <version>1.1.3</version>
     <packaging>war</packaging>
 
     <scm>
         <connection>scm:git:git://github.com/jboss-set/mjolnir.git</connection>
         <developerConnection>scm:git:git@github.com:jboss-set/mjolnir.git</developerConnection>
         <url>https://github.com/jboss-set/mjolnir</url>
-        <tag>HEAD</tag>
+        <tag>1.1.3</tag>
     </scm>
 
     <properties>
@@ -270,7 +270,7 @@
                             <filemode>644</filemode>
                             <username>root</username>
                             <groupname>root</groupname>
-                            <artifact/>
+                            <artifact />
                         </mapping>
                         <mapping>
                             <directory>/usr/share/${project.name}</directory>
